@@ -169,7 +169,6 @@ static_assert(!is_istreamable<handle>{},"");
 static_assert(!std::is_constructible<bool, handle>{}, "");
 static_assert(!is_incrementable<handle>{},"");
 static_assert(!is_decrementable<handle>{},"");
-static_assert(!std::is_arithmetic<handle>{},"");
 static_assert(!is_hashable<handle>{},"");
 static_assert(!is_indexable<handle, int>{}, "");
 static_assert(!is_range<handle>{}, "");
@@ -198,7 +197,6 @@ static_assert(!is_istreamable<bhandle>{},"");
 static_assert(std::is_constructible<bool, bhandle>{}, "");
 static_assert(!is_incrementable<bhandle>{},"");
 static_assert(!is_decrementable<bhandle>{},"");
-static_assert(!std::is_arithmetic<bhandle>{},"");
 static_assert(!is_hashable<bhandle>{},"");
 static_assert(!is_indexable<bhandle, int>{}, "");
 static_assert(!is_range<bhandle>{}, "");
@@ -219,7 +217,6 @@ static_assert(!is_istreamable<dchandle>{},"");
 static_assert(!std::is_constructible<bool, dchandle>{}, "");
 static_assert(!is_incrementable<dchandle>{},"");
 static_assert(!is_decrementable<dchandle>{},"");
-static_assert(!std::is_arithmetic<dchandle>{},"");
 static_assert(!is_hashable<dchandle>{},"");
 static_assert(!is_indexable<dchandle, int>{}, "");
 static_assert(!is_range<dchandle>{}, "");
@@ -240,7 +237,6 @@ static_assert(!is_istreamable<ahandle>{},"");
 static_assert(!std::is_constructible<bool, ahandle>{}, "");
 static_assert(!is_incrementable<ahandle>{},"");
 static_assert(!is_decrementable<ahandle>{},"");
-static_assert(std::is_arithmetic<ahandle>{},"");
 static_assert(is_modulo_able<ahandle>{},"");
 static_assert(!is_hashable<ahandle>{},"");
 static_assert(is_subtractable<ahandle>{}, "");
@@ -271,7 +267,6 @@ static_assert(!is_istreamable<hhandle>{},"");
 static_assert(!std::is_constructible<bool, hhandle>{}, "");
 static_assert(!is_incrementable<hhandle>{},"");
 static_assert(!is_decrementable<hhandle>{},"");
-static_assert(!std::is_arithmetic<hhandle>{},"");
 static_assert(is_hashable<hhandle>{},"");
 static_assert(!is_indexable<hhandle, int>{}, "");
 static_assert(!is_range<hhandle>{}, "");
@@ -293,7 +288,6 @@ static_assert(!is_istreamable<ihandle>{},"");
 static_assert(!std::is_constructible<bool, ihandle>{}, "");
 static_assert(!is_incrementable<ihandle>{},"");
 static_assert(!is_decrementable<ihandle>{},"");
-static_assert(!std::is_arithmetic<ihandle>{},"");
 static_assert(!is_hashable<ihandle>{},"");
 static_assert(is_indexable<ihandle, int>{}, "");
 static_assert(has_at<ihandle, int>{}, "");
@@ -314,7 +308,6 @@ static_assert(!is_istreamable<dhandle>{},"");
 static_assert(!std::is_constructible<bool, dhandle>{}, "");
 static_assert(!is_incrementable<dhandle>{},"");
 static_assert(!is_decrementable<dhandle>{},"");
-static_assert(!std::is_arithmetic<dhandle>{},"");
 static_assert(!is_hashable<dhandle>{},"");
 static_assert(!is_indexable<dhandle, int>{}, "");
 static_assert(is_subtractable<dhandle,handle>{}, "");
@@ -341,7 +334,6 @@ static_assert(!is_istreamable<ri>{},"");
 static_assert(!std::is_constructible<bool, ri>{}, "");
 static_assert(is_incrementable<ri>{},"");
 static_assert(is_decrementable<ri>{},"");
-static_assert(!std::is_arithmetic<ri>{},"");
 static_assert(!is_hashable<ri>{},"");
 static_assert(is_indexable<ri, int>{}, "");
 static_assert(is_subtractable<ri,ri>{}, "");
@@ -366,7 +358,6 @@ static_assert(is_incrementable<li>{},"");
 #ifndef _MSC_VER
 static_assert(!is_decrementable<li>{},"");
 #endif
-static_assert(!std::is_arithmetic<li>{},"");
 static_assert(!is_hashable<li>{},"");
 static_assert(!is_indexable<li, int>{}, "");
 static_assert(!is_subtractable<li,li>{}, "");
@@ -389,7 +380,6 @@ static_assert(!is_istreamable<rhandle>{},"");
 static_assert(!std::is_constructible<bool, rhandle>{}, "");
 static_assert(!is_incrementable<rhandle>{},"");
 static_assert(!is_decrementable<rhandle>{},"");
-static_assert(!std::is_arithmetic<rhandle>{},"");
 static_assert(!is_hashable<rhandle>{},"");
 static_assert(!is_indexable<rhandle, int>{}, "");
 static_assert(!is_subtractable<rhandle,rhandle>{}, "");
@@ -428,7 +418,6 @@ static_assert(!is_istreamable<uhandle>{},"");
 static_assert(!std::is_constructible<bool, uhandle>{}, "");
 static_assert(!is_incrementable<uhandle>{},"");
 static_assert(!is_decrementable<uhandle>{},"");
-static_assert(!std::is_arithmetic<uhandle>{},"");
 static_assert(!is_hashable<uhandle>{},"");
 static_assert(!is_indexable<uhandle, int>{}, "");
 static_assert(is_subtractable<uhandle,uhandle>{}, "");
